--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -10,6 +10,11 @@
     font-weight: lighter;
 }
 
+@font-face {
+    font-family: 'Montserrat';
+    src: url("@/assets/fonts/Montserrat-VariableFont_wght.ttf");
+}
+
 html {
     margin: 0;
     padding: 0;
