--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -24,6 +24,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Octarine';
-    background-color: #2a2a2a00;
+    background-color: #2a2a2a;
     color: white;
 }
